--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
     <h1>גרף פעילות מוחית - ניטור מתח ורוגע</h1>
     <div class="container">
-        <img src="assets/images/brain.png" alt="מוח" class="brain-background">
+        <img src="https://github.com/metanel/my-brain-graph/blob/main/assets/images/brain.png?raw=true" alt="מוח" class="brain-background">
         <canvas id="graph"></canvas>
     </div>
     <div id="waiting-text" class="waiting-text">המתן עד לקריאת פעילות המוח...</div>
