--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="he">
 <head>
@@ -53,19 +54,30 @@
 </head>
 <body>
 
-    <h1>מדד פעילות מוחית - ברוך הבא</h1>
+    <h1>מדד פעילות מוחית - חוויה מוחית אמיתית בזמן אמת!</h1>
     
-    <p><strong>איך לקרוא את הגרף?</strong></p>
-    <p>המטרה שלכם היא להגיע לרוגע. ככל שאתם רגועים יותר – הגרף יורד כלפי מטה.</p>
+    <p><strong>🔬 איך זה עובד?</strong></p>
+    <p>ברגע שתחברו **אוזניות אלחוטיות** לבלוטות' במכשיר שלכם, הן יתחילו **לקרוא את גלי המוח שלכם**! 
+    המערכת משתמשת בטכנולוגיית **EEG** מתקדמת כדי לנתח את הפעילות החשמלית של המוח ולהציג אותה **בצורה ויזואלית** על גבי הגרף.</p>
 
-    <p><strong>מה יש לעשות לפני השימוש בגרף?</strong></p>
-    <p>חבשו אוזניות אלחוטיות כדי שיקראו את הפעילות המוחית שלכם, ולאחר מכן לחצו על הכפתור "מעבר לגרף".</p>
+    <p><strong>🎯 מטרתכם: להגיע לרוגע ולשלווה</strong></p>
+    <p>הגרף מציג בזמן אמת את רמות המתח והרוגע שלכם.  
+    אם אתם מתוחים – תראו קפיצות בגרף.  
+    אם אתם רגועים – הגרף יתחיל לרדת בצורה הדרגתית.</p>
+
+    <p>🔹 **מחקרים הוכיחו** שצפייה ישירה בפעילות המוחית **מפחיתה לחץ** ועוזרת להגיע לריכוז גבוה יותר.</p>
+
+    <p><strong>🎵 חשוב! הפעילו את המוזיקה לפני תחילת הניטור</strong></p>
+    <p>לפני שתתחילו בניטור, הפעילו את המוזיקה שלמטה **באוזניות האלחוטיות בלבד**.  
+    צלילים אלו גורמים לפעילות מוחית מדויקת יותר ומגבירים את הרוגע.</p>
 
     <!-- סרטון YouTube -->
     <iframe src="https://www.youtube.com/embed/BnjdaA6GEJw" allowfullscreen></iframe>
 
+    <p><strong>🚀 כעת, שבו בנוחות, שימו את האוזניות, הפעילו את המוזיקה, נשמו עמוק, ולחצו על הכפתור כדי להתחיל בניטור המוח שלכם.</strong></p>
+
     <!-- כפתור להופעת הגרף -->
-    <button id="show-graph-btn" class="button" onclick="showGraph()">מעבר לגרף</button>
+    <button id="show-graph-btn" class="button" onclick="showGraph()">💡 לחץ לניטור הפעילות המוחית שלך!</button>
 
     <!-- הגרף יופיע כאן רק אחרי שלוחצים על הכפתור -->
     <div id="graph-container">
@@ -74,3 +86,4 @@
 
 </body>
 </html>
+```
