--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="he">
 <head>
@@ -54,27 +53,47 @@
 </head>
 <body>
 
-    <h1>מדד פעילות מוחית - חוויה מוחית אמיתית בזמן אמת!</h1>
-    
-    <p><strong>🔬 איך זה עובד?</strong></p>
-    <p>ברגע שתחברו **אוזניות אלחוטיות** לבלוטות' במכשיר שלכם, הן יתחילו **לקרוא את גלי המוח שלכם**! 
-    המערכת משתמשת בטכנולוגיית **EEG** מתקדמת כדי לנתח את הפעילות החשמלית של המוח ולהציג אותה **בצורה ויזואלית** על גבי הגרף.</p>
+    <h1>🧠 מדד פעילות מוחית - מהפכה טכנולוגית בניטור גלי מוח!</h1>
 
-    <p><strong>🎯 מטרתכם: להגיע לרוגע ולשלווה</strong></p>
-    <p>הגרף מציג בזמן אמת את רמות המתח והרוגע שלכם.  
-    אם אתם מתוחים – תראו קפיצות בגרף.  
-    אם אתם רגועים – הגרף יתחיל לרדת בצורה הדרגתית.</p>
+    <p><strong>🔬 איך זה עובד? טכנולוגיית העתיד לניטור מוחי</strong></p>
+    <p>בפעם הראשונה בהיסטוריה, יש לכם <strong>גישה ישירה לניטור גלי המוח שלכם</strong> בזמן אמת!  
+    🌍 הטכנולוגיה החדשנית מאחורי הגרף מבוססת על עקרונות <strong>EEG (Electroencephalography)</strong> – טכניקה רפואית מתקדמת שהייתה שמורה בעבר <strong>למעבדות מחקר ולבתי חולים</strong> בלבד.</p>
 
-    <p>🔹 **מחקרים הוכיחו** שצפייה ישירה בפעילות המוחית **מפחיתה לחץ** ועוזרת להגיע לריכוז גבוה יותר.</p>
+    <p><strong>איך זה מתאפשר?</strong></p>
+    <p>🎧 <strong>האוזניות האלחוטיות שלכם הן המפתח!</strong>  
+    כאשר אתם מחברים <strong>אוזניות בלוטוס</strong> לאוזניכם ומסנכרנים אותן עם המכשיר, הן מתחילות לשלוח <strong>פולסים חשמליים עדינים</strong> שנקלטים על פני הקרקפת שלכם.  
+    גלי המוח שלכם מגיבים לאותות הללו, ומהחזרה שלהם ניתן <strong>למדוד במדויק את הפעילות החשמלית במוח</strong> – בדיוק כפי שעושה מכשיר EEG מקצועי!</p>
 
-    <p><strong>🎵 חשוב! הפעילו את המוזיקה לפני תחילת הניטור</strong></p>
-    <p>לפני שתתחילו בניטור, הפעילו את המוזיקה שלמטה **באוזניות האלחוטיות בלבד**.  
-    צלילים אלו גורמים לפעילות מוחית מדויקת יותר ומגבירים את הרוגע.</p>
+    <p>📡 הנתונים עוברים <strong>סינון ועיבוד חכם</strong> ומוצגים <strong>כגרף ויזואלי דינמי</strong>, כך שתוכלו לראות <strong>איך המוח שלכם פועל בזמן אמת!</strong></p>
+
+    <p><strong>🎯 מהו היעד שלכם? ניטור ומודעות מוחית</strong></p>
+    <p>💡 רוצים לדעת איך המוח שלכם מגיב למתח? רוגע? ריכוז?  
+    🔹 הגרף הזה מציג <strong>את הפעילות החשמלית של המוח שלכם</strong> ומשקף את מצבכם הפיזיולוגי והנפשי.  
+    🔹 כאשר אתם <strong>דרוכים או במתח</strong>, גלי המוח מואצים – וניתן לראות תנודות חדות כלפי מעלה.  
+    🔹 כאשר אתם <strong>רגועים וממוקדים</strong>, הפעילות החשמלית מתאזנת – והגרף יורד בהדרגה.</p>
+
+    <p>📊 <strong>צפייה ישירה במוח שלכם עוזרת לו להתאזן!</strong>  
+    מחקרים הוכיחו שאנשים שיכולים לראות <strong>באופן ויזואלי את גלי המוח שלהם</strong> מסוגלים <strong>לווסת טוב יותר את רמות המתח והרוגע</strong> שלהם, <strong>להגביר את הריכוז ולשפר את הביצועים הקוגניטיביים</strong>!</p>
+
+    <p>✨ <strong>זוהי טכנולוגיה חדשה לחלוטין</strong> – ומחקרים ראשוניים מראים כי היא <strong>יכולה לשנות את הדרך בה אנו מבינים ומאזנים את המוח שלנו!</strong></p>
+
+    <p><strong>🎵 סאונד ייחודי לניטור מדויק יותר</strong></p>
+    <p>🔊 <strong>לפני תחילת הניטור, יש להפעיל את הסאונד המדעי בסרטון למטה</strong></p>
+    <p>🔹 הסאונד בסרטון <strong>לא משנה את מצב הרוח שלכם</strong>, אלא פועל <strong>כסמן עצבי מדעי</strong>, המאפשר לאוזניות ולטכנולוגיה שמאחורי הגרף <strong>לנטר את פעילות המוח שלכם בדיוק רב יותר</strong>.  
+    🔹 הסאונד יוצר <strong>נקודת יחוס נוירולוגית</strong>, כך שהמערכת יודעת <strong>לקרוא ולהבין את גלי המוח שלכם ללא עיוותים חיצוניים</strong>.</p>
+
+    <p>✅ <strong>הפעילו את הסרטון</strong> עם <strong>אוזניות אלחוטיות בלבד</strong> – וזכרו, אין צורך להתרכז במוזיקה!  
+    המערכת תשתמש באותות המוחיים שלכם בזמן אמת כדי לייצר את הניטור המדויק ביותר!</p>
 
     <!-- סרטון YouTube -->
     <iframe src="https://www.youtube.com/embed/BnjdaA6GEJw" allowfullscreen></iframe>
 
-    <p><strong>🚀 כעת, שבו בנוחות, שימו את האוזניות, הפעילו את המוזיקה, נשמו עמוק, ולחצו על הכפתור כדי להתחיל בניטור המוח שלכם.</strong></p>
+    <p><strong>🚀 מה עכשיו? צאו למסע לתוך המוח שלכם!</strong></p>
+
+    <p>1️⃣ <strong>חברו את האוזניות האלחוטיות שלכם</strong> לבלוטוס במכשיר.</p>
+    <p>2️⃣ <strong>הפעילו את הסרטון למטה</strong> והשאירו אותו פועל במהלך הניטור.</p>
+    <p>3️⃣ <strong>הביטו במסך, קחו נשימה עמוקה…</strong></p>
+    <p>4️⃣ <strong>לחצו על הכפתור כדי להתחיל לנטר את הפעילות המוחית שלכם!</strong></p>
 
     <!-- כפתור להופעת הגרף -->
     <button id="show-graph-btn" class="button" onclick="showGraph()">💡 לחץ לניטור הפעילות המוחית שלך!</button>
@@ -86,4 +105,3 @@
 
 </body>
 </html>
-```
