--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+```html
 <!DOCTYPE html>
-<html lang="he">
+<html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +14,22 @@
     <style>
         body {
             text-align: center;
-            background-color: black;
-            color: white;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            direction: rtl;
+            background-color: white;
+            color: black;
+        }
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: black;
+                color: white;
+            }
+            .button {
+                background-color: #FFD700;
+                color: black;
+            }
         }
         h1 {
             margin-top: 20px;
@@ -105,3 +117,4 @@
 
 </body>
 </html>
+```
