--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-    <h1>🧠 מדד פעילות מוחית - מהפכה טכנולוגית בניטור גלי מוח!</h1>
+    <h1>🧠 מהפכה טכנולוגית בניטור גלי מוח!</h1>
 
     <p><strong>🔬 איך זה עובד? טכנולוגיית העתיד לניטור מוחי</strong></p>
     <p>בפעם הראשונה בהיסטוריה, יש לכם <strong>גישה ישירה לניטור גלי המוח שלכם</strong> בזמן אמת!  
@@ -78,16 +78,10 @@
 
     <p>📡 הנתונים עוברים <strong>סינון ועיבוד חכם</strong> ומוצגים <strong>כגרף ויזואלי דינמי</strong>, כך שתוכלו לראות <strong>איך המוח שלכם פועל בזמן אמת!</strong></p>
 
-    <p><strong>🎯 מהו היעד שלכם? ניטור ומודעות מוחית</strong></p>
-    <p>💡 רוצים לדעת איך המוח שלכם מגיב למתח? רוגע? ריכוז?  
+    <p><strong>💡 רוצים לדעת איך המוח שלכם מגיב למתח? רוגע? ריכוז?</strong></p>
     🔹 הגרף הזה מציג <strong>את הפעילות החשמלית של המוח שלכם</strong> ומשקף את מצבכם הפיזיולוגי והנפשי.  
     🔹 כאשר אתם <strong>דרוכים או במתח</strong>, גלי המוח מואצים – וניתן לראות תנודות חדות כלפי מעלה.  
     🔹 כאשר אתם <strong>רגועים וממוקדים</strong>, הפעילות החשמלית מתאזנת – והגרף יורד בהדרגה.</p>
-
-    <p>📊 <strong>צפייה ישירה במוח שלכם עוזרת לו להתאזן!</strong>  
-    מחקרים הוכיחו שאנשים שיכולים לראות <strong>באופן ויזואלי את גלי המוח שלהם</strong> מסוגלים <strong>לווסת טוב יותר את רמות המתח והרוגע</strong> שלהם, <strong>להגביר את הריכוז ולשפר את הביצועים הקוגניטיביים</strong>!</p>
-
-    <p>✨ <strong>זוהי טכנולוגיה חדשה לחלוטין</strong> – ומחקרים ראשוניים מראים כי היא <strong>יכולה לשנות את הדרך בה אנו מבינים ומאזנים את המוח שלנו!</strong></p>
 
     <p><strong>🎵 סאונד ייחודי לניטור מדויק יותר</strong></p>
     <p>🔊 <strong>לפני תחילת הניטור, יש להפעיל את הסאונד המדעי בסרטון למטה</strong></p>
