--- a/index.html
+++ b/index.html
@@ -12,20 +12,31 @@
         }
     </script>
     <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            direction: rtl;
-            background-color: white;
-            color: black;
-        }
+       body {
+    text-align: center;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    direction: rtl;
+    background-color: white;
+    background-image: url('assets/images/calm_woman_headphones.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: overlay; /* הופך את התמונה לעדינה יותר */
+    color: black;
+}
         @media (prefers-color-scheme: dark) {
-            body {
-                background-color: black;
-                color: white;
-            }
+    body {
+        background-color: black;
+        background-image: url('assets/images/calm_woman_headphones.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-blend-mode: overlay;
+        color: white;
+    }
+}
             .button {
                 background-color: #FFD700;
                 color: black;
