--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
             }
         }
         h1 {
-            margin-top: 20px;
-            color: #FFD700;
-        }
+    max-width: 80%;
+    margin: 20px auto;
+    text-align: center;
+    color: #FFD700; /* צהוב */
+    padding: 10px;
+}
         p {
             font-size: 18px;
             margin: 20px;
@@ -76,7 +79,7 @@
 </head>
 <body>
 
-    <h1>   מהפכה טכנולוגית: צפו בגלי המוח שלכם בחינם מכל מקום!  </h1>
+    <h1>מהפכה טכנולוגית: צפו בגלי המוח שלכם בחינם מכל מקום!</h1>
 
     <p><strong>🔬 איך זה עובד? טכנולוגיית העתיד לניטור מוחי</strong></p>
     <p>בפעם הראשונה בהיסטוריה, יש לכם <strong>גישה ישירה לניטור גלי המוח שלכם</strong> בזמן אמת!  
