--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             padding: 0;
             direction: rtl;
             background-color: white;
-            background-image: url('assets/images/calm_woman_headphones.png');
+            background-image: url('https://raw.githubusercontent.com/metanel/my-brain-graph/main/assets/images/calm_woman_headphones.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -29,7 +29,7 @@
         @media (prefers-color-scheme: dark) {
             body {
                 background-color: black;
-                background-image: url('assets/images/calm_woman_headphones.png');
+                background-image: url('https://raw.githubusercontent.com/metanel/my-brain-graph/main/assets/images/calm_woman_headphones.png');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
