--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
     <div class="content-box">
         <h2>2️⃣ הפעילו את הסרטון ושמעו את הצלילים 🎵</h2>
-        <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/BnjdaA6GEJw" allowfullscreen></iframe>
         <p style="color: #DC143C;">✅ הסאונד לא משנה את מצב הרוח שלכם, אלא <strong>עוזר לניטור מוחי מדויק יותר</strong>.</p>
         <p style="color: #008B8B;">✅ הוא <strong>יוצר נקודת יחוס נוירולוגית</strong>, כך שהמערכת מזהה גלי מוח בצורה חדה.</p>
         <p style="color: #4682B4;">✅ <strong>האזינו עם אוזניות אלחוטיות בלבד! 🎧</strong></p>
