--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
     </div>
     
     <div id="graph-container">
-        <img src="assets/images/brain.png" alt="מוח" class="brain-background">
-        <canvas id="graph"></canvas>
-    </div>
+    <iframe src="graph.html" width="100%" height="500px" style="border:none;"></iframe>
+        </div>
 </body>
 </html>
