--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         }
 
         #graph-container {
-            display: none;
-            margin-top: 20px;
-        }
+    display: none;
+    margin-top: 20px;
+    overflow: auto; /* מוסיף גלילה פנימית אם צריך */
+    max-height: 90vh; /* מקסימום גובה - 90% מגובה המסך */
+            }
 
         .content-box {
             background: rgba(255, 255, 255, 1);
@@ -112,7 +114,7 @@
     </div>
     
     <div id="graph-container">
-    <iframe src="graph.html" width="100%" height="300px" style="border:none;"></iframe>
+    <iframe src="graph.html" width="100%" height="100%" style="border:none;"></iframe>
         </div>
 </body>
 </html>
