--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     margin-top: 20px;
     overflow: auto; /* מוסיף גלילה פנימית אם צריך */
     max-height: 90vh; /* מקסימום גובה - 90% מגובה המסך */
+    text-align: center; /* ממרכז את הגרף */
             }
 
         .content-box {
@@ -114,7 +115,7 @@
     </div>
     
     <div id="graph-container">
-    <iframe src="graph.html" width="100%" height="100%" style="border:none;"></iframe>
+    <iframe src="graph.html" width="100%" height="90vh" style="border:none; display:block;"></iframe>
         </div>
 </body>
 </html>
