--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         #graph-container {
     display: none;
     margin-top: 20px;
-    overflow: auto; /* מוסיף גלילה פנימית אם צריך */
+    overflow: hidden; /* מונע גלילה פנימית */
     max-height: 90vh; /* מקסימום גובה - 90% מגובה המסך */
     text-align: center; /* ממרכז את הגרף */
             }
@@ -115,7 +115,7 @@
     </div>
     
     <div id="graph-container">
-    <iframe src="graph.html" width="100%" height="90vh" style="border:none; display:block;"></iframe>
+    <iframe src="graph.html" width="100%" height="600px" style="border:none; display:block;"></iframe>
         </div>
 </body>
 </html>
