--- a/graph.html
+++ b/graph.html
@@ -42,9 +42,9 @@
             100% { opacity: 0.18; }
         }
         canvas {
-            width: 100% !important;
-            max-width: 300px !important;
-            height: 300px !important;
+            width: 100%;
+            max-width: 600px;
+            height: 300px;
             border: 2px solid #FFD700;
             background-color: #111;
             box-shadow: 0px 0px 10px rgba(255, 215, 0, 0.5);
