--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
     
     <div id="graph-container">
-    <iframe src="graph.html" width="100%" height="4000px" style="border:none; display:block;"></iframe>
+    <iframe src="graph.html" width="100%" height="320px" style="border:none; display:block; max-width: 100%;"></iframe>
         </div>
 </body>
 </html>
