--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     overflow: hidden; /* מונע גלילה פנימית */
     max-height: 90vh; /* מקסימום גובה - 90% מגובה המסך */
     text-align: center; /* ממרכז את הגרף */
+    max-width: 100%;
             }
 
         .content-box {
