--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>מדד פעילות מוחית</title>
-    <script>
-        function showGraph() {
-            document.getElementById("graph-container").style.display = "block";
-            document.getElementById("show-graph-btn").style.display = "none";
+    <link rel="stylesheet" href="css/styles.css">
+    <script defer src="js/script.js"></script>
+</head>
         }
     </script>
     <style>
