--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     
     <div class="content-box">
         <h2>3️⃣ הביטו במסך, קחו נשימה עמוקה… ולחצו על הכפתור כדי להתחיל לנטר את הפעילות המוחית שלכם!</h2>
-        <button id="show-graph-btn" class="button" onclick="showGraph()">🎯 💡 לחץ לניטור הפעילות המוחית שלך!</button>
+        <button id="show-graph-btn" class="button">🎯 💡 לחץ לניטור הפעילות המוחית שלך!</button>
         <p style="color: #556B2F;">✅ לחיצה על הכפתור מתחילה את <strong>הניטור המוחי בזמן אמת</strong>.</p>
         <p style="color: #9932CC;">✅ תוכלו לראות איך <strong>המוח מגיב ללחץ, רוגע וריכוז</strong>!</p>
         <p style="color: #FF4500;">✅ עם תרגול, תוכלו <strong>לשפר את השליטה בפעילות המוחית שלכם</strong>.</p>
