--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
     </div>
     
     <div id="graph-container">
+        <div id="graph-modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <iframe src="graph.html" width="100%" height="500px"></iframe>
+    </div>
+</div>
     <iframe src="graph.html" width="100%" height="500px" style="border:none; display:block; max-width: 100%;"></iframe>
         </div>
 </body>
