--- a/graph.html
+++ b/graph.html
@@ -8,7 +8,7 @@
     <style>
         body {
             text-align: center;
-            background-color: #000;
+            background-color: transparent; /* שינוי לשקוף */
             color: #FFD700;
             font-family: Arial, sans-serif;
             margin: 0;
