--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@
         <div id="graph-modal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <iframe src="graph.html" width="100%" height="500px"></iframe>
+        <iframe src="graph.html" width="100%" height="400px" style="border:none; max-width: 350px; margin: auto; display: block;"></iframe>
     </div>
 </div>
-    <iframe src="graph.html" width="100%" height="500px" style="border:none; display:block; max-width: 100%;"></iframe>
         </div>
 </body>
 </html>
