--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 <body>
     <h1>🎯 ניטור פעילות מוחית - גרף רוגע ומתח</h1>
     <img src="assets/images/calm_woman_headphones.png" alt="אישה רגועה עם אוזניות" class="image">
+        <p>🎵 השמע את הצליל המיוחד כדי לשפר את הדיוק במדידה:</p>
+    <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/YOUTUBE_VIDEO_ID?autoplay=1&loop=1&playlist=YOUTUBE_VIDEO_ID" 
+        title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
+
     
     <p>🔊 יש לוודא שהאוזניות מחוברות ולנגן את הצליל הייחודי ביוטיוב</p>
     
