--- a/index.html
+++ b/index.html
@@ -86,3 +86,60 @@
     </style>
 </head>
 <body>
+    <h1>בואו לנטר את גלי המוח שלכם בזמן אמת!</h1>
+
+    <h2>1️⃣ חברו את האוזניות האלחוטיות שלכם לבלוטוס 🎧</h2>
+    <img src="assets/images/calm_woman_headphones.png" alt="אישה רגועה עם אוזניות" style="max-width:100%; border-radius:10px; margin-top:20px;">
+    <p style="color: #008000;">✅ חיבור האוזניות מאפשר <strong>לקרוא את פעילות המוח שלכם</strong> בדיוק גבוה.</p>
+    <p style="color: #8A2BE2;">✅ הטכנולוגיה <strong>שולחת פולסים עדינים</strong>, והמוח מחזיר תגובות שנמדדות בגרף.</p>
+    <p style="color: #FF6347;">✅ כך תוכלו <strong>לראות את הפעילות המוחית שלכם בזמן אמת!</strong></p>
+    <p><strong style="color: #FF8C00;">🔹 למה זה חשוב?</strong> EEG מתקדם ישירות מהאוזניות!</p>
+
+    <h2>2️⃣ הפעילו את הסרטון ושמעו את הצלילים 🎵</h2>
+    <iframe id="video-frame" width="560" height="315" 
+        src="https://www.youtube.com/embed/BnjdaA6GEJw" 
+        title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
+    <p style="color: #DC143C;">✅ הסאונד לא משנה את מצב הרוח שלכם, אלא <strong>עוזר לניטור מוחי מדויק יותר</strong>.</p>
+    <p style="color: #008B8B;">✅ הוא <strong>יוצר נקודת יחוס נוירולוגית</strong>, כך שהמערכת מזהה גלי מוח בצורה חדה.</p>
+    <p style="color: #4682B4;">✅ <strong>האזינו עם אוזניות אלחוטיות בלבד! 🎧</strong></p>
+    <p><strong style="color: #DAA520;">🔹 למה זה חשוב?</strong> כך הקריאה תהיה מדויקת וללא עיוותים!</p>
+
+    <h2>3️⃣ הביטו במסך, קחו נשימה עמוקה… ולחצו על הכפתור כדי להתחיל לנטר את הפעילות המוחית שלכם!</h2>
+    <button id="show-graph-btn" class="button">🎯 💡 לחץ לניטור הפעילות המוחית שלך!</button>
+    
+    <div id="graph-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <iframe src="graph.html" width="100%" height="400px" style="border:none; max-width: 350px; margin: auto; display: block;"></iframe>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const showGraphBtn = document.getElementById("show-graph-btn");
+            const modal = document.getElementById("graph-modal");
+            const closeModal = document.querySelector(".close");
+
+            // לחיצה על הכפתור תפתח את המודל
+            showGraphBtn.addEventListener("click", function () {
+                modal.style.display = "flex";
+            });
+
+            // לחיצה על כפתור הסגירה תסגור את המודל
+            closeModal.addEventListener("click", function () {
+                modal.style.display = "none";
+            });
+
+            // סגירה כאשר לוחצים מחוץ למודל
+            window.addEventListener("click", function (event) {
+                if (event.target === modal) {
+                    modal.style.display = "none";
+                }
+            });
+        });
+    </script>
+</body>
+</html>
